# RentCompass

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.example  app.py  mcp_server.py  unified-ui.html
deploy/: DEPLOY_DOMAIN.md  searxng-settings.yml.example  setup_nginx_http.sh  setup_tls_8443.sh  update.sh
docs/: DOCKER.md  HANDOFF.md  MCP.md  TESTING.md  agent_design.aux  agent_design.out  agent_design.tex  agent_design.toc  canary_runbook.md  eval_infrastructure.md  evaluator_contract.md  harness_migration_design.md  langgraph_advanced_面试速记.md  memory_context_preregistration.md
evals/: thresholds.json
evaluation/: AUDIT.md  README.md  __init__.py  cache_snapshot.py  make_cache_snapshot.py  memory_eval.py  model_pricing.yaml  report.py  rescore.py  results_package.py  run_ablation.py  run_benchmark.py
examples/: langgraph_advanced_demo.py
local_data_demo/: .env.example  MCP.md  app.py  config.py  finetuned_parser.py  mcp_server.py  requirements.txt  scraping_selftest.py  test_prompt.txt  unified-ui.html
maps/: index.html  property_1.html  property_2.html  property_3.html  property_4.html  property_5.html  property_6.html
scripts/: canary_cost.py  canary_report.py  eval_capture_allowlist_check.sh
searxng/: settings.yml
tests/: conftest.py  test_agent_loop.py  test_agent_memory_branching.py  test_agent_memory_isolation.py  test_app_input_validation.py  test_area_as_destination.py  test_area_budget_clear_extractors.py  test_assemble_messages.py  test_auth_store.py  test_canary_contract.py  test_canary_report.py  test_canary_rollout.py  test_case_contract_consistency.py  test_classify_place.py  test_compare_areas.py  test_context_assembler.py  test_conversation_store.py  test_conversation_store_fork.py  test_critic_grounding.py  test_destination_in_message.py  test_dsml_guard.py  test_edit_turn_api.py  test_eval_fc_metrics.py  test_eval_measurement_infra.py  test_eval_profiling.py  test_execution_plan.py  test_fc_critic.py  test_fc_history_wiring.py  test_fc_loop.py  test_fix_core_llm_routing.py  (+48 more)
(+351 files in other folders)
