[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-rent-agent"
version = "0.1.0"
description = "UK student rental recommendation agent"
requires-python = ">=3.10,<3.13"
dependencies = [
  "flask",
  "flask-cors",
  "pandas",
  "python-dotenv",
  "requests",
  "waitress",
  "chromadb", "sentence-transformers", "faiss-cpu", "geopy", "folium", "ddgs",
  "langgraph", "langgraph-checkpoint-sqlite", "langchain", "langchain-core", "langchain-ollama",
  "langchain-openai", "openai", "mcp",
  "pydantic>=2.7", "starlette", "uvicorn[standard]",
]

[project.optional-dependencies]
finetune = ["torch", "torchvision", "torchaudio", "transformers", "peft", "accelerate"]
dev = ["pytest", "pytest-asyncio", "import-linter"]

[project.scripts]
uk-rent-web = "uk_rent_agent.web.__main__:main"
uk-rent-asgi = "uk_rent_agent.web.asgi:main"
uk-rent-eval-gate = "uk_rent_agent.evals.ci_gate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "local_data_demo"]
testpaths = ["tests_refactor"]
